# zenith

./: Cargo.toml  README.md
src/: main.rs
zcli/: Cargo.toml  build.rs
zcli/src/: main.rs
zdash/: Cargo.toml
zdash/src/: main.rs
zenith/: Cargo.toml  build.rs
zenith/proto/: status.proto
zenith/src/: main.rs
