[package]
name = "zdash"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = { workspace = true, features = ["capture-spantrace"] }
axum.workspace = true
tokio = { workspace = true, features = ["full", "tracing"] }
tracing-error.workspace = true
tracing-futures.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["fmt", "ansi", "env-filter"]}
tower-http = { workspace = true, features = ["full"]}
