[package]
name = "zenith"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tonic-build.workspace = true

[dependencies]
prost.workspace = true
tonic.workspace = true
tokio = { workspace = true, features = ["full", "tracing"] }
tracing-futures.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["fmt", "ansi", "env-filter"]}
